--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
-*
-!*/
-!*.py
-!*.hpp
-!*.cpp
-!*.pxd
-!*.pyx
+!__init__.py
 !.gitignore
-!*.md
-eigen
-build
-genointerface.cpp
+!README.md
+!setup.py
+!augmentedLagrangian.cpp
+!augmentedLagrangian.hpp
+!genointerface.pxd
+!genointerface.pyx
+!genoNLP.hpp
+!genosolver.py
+!lbfgsb.cpp
+!lbfgsb.hpp
+!lineSearch.cpp
+!lineSearch.hpp
+!pygenointerface.cpp
+!pygenointerface.hpp
+!pygenonlp.cpp
+!pygenonlp.hpp
